--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Brian Crews",
   "license": "ISC",
   "dependencies": {
+    "@sequelize/sqlite3": "^7.0.0-alpha.41",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -16,6 +17,7 @@
     "express-session": "^1.18.0",
     "passport": "^0.7.0",
     "pg": "^8.12.0",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7"
   }
 }
