--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Prototype of Uvents server application to assist design decisions.",
   "main": "server.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "swagger": "node ./swagger/generateSwagger.js"
   },
   "author": "Brian Crews",
   "license": "ISC",
@@ -18,6 +19,10 @@
     "passport": "^0.7.0",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "swagger-autogen": "^2.23.7"
   }
 }
