--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "passport": "^0.7.0",
+    "paypal-rest-sdk": "^1.8.1",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7",
