--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Brian Crews",
   "license": "ISC",
   "dependencies": {
+    "@ngrok/ngrok": "^1.3.0",
     "@sequelize/sqlite3": "^7.0.0-alpha.41",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
